Hozzáadtam a jobb linkek szövegét, és elhelyeztem az oldalon őket

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pure Stream öntözéstechnika</title>
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <div class="header">
-        <img src="./images/logo.png" alt="Pure stream logo" width="10px" height="auto">
-
-
+        <img src="./images/logo.png" alt="Pure stream logo" width="90px" height="auto">
+        <div class="header-buttons">
+            <p class="header-right">Kezdőlap</p>
+            <p class="header-right">Galéria</p>
+            <p class="header-right">Kontakt</p>
+        </div>
     </div>
 </body>
 </html>
