Hozzáadva a linkek a headerhez, létrehozva a külön oldalaknak a boilerplate

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <img src="./images/logo.png" alt="Pure stream logo" width="90px" height="auto">
         <div class="header-buttons">
-            <p class="header-right">Kezdőlap</p>
-            <p class="header-right">Galéria</p>
-            <p class="header-right">Kontakt</p>
+            <a href="oldee18.github.io/purestream" class="header-right" rel="noopener norefereer">Kezdőlap</a>
+            <a href="./pages/gallery.html" class="header-right" rel="noopener norefereer">Galéria</a>
+            <a href="./pages/contact.html" class="header-right" rel="noopener norefereer">Kontakt</a>
         </div>
     </div>
 </body>
