--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <div class="header">
         <img src="./images/logo.png" alt="Pure stream logo" width="90px" height="auto">
         <div class="header-buttons">
-            <a href="oldee18.github.io/purestream" class="header-right" rel="noopener norefereer">Kezdőlap</a>
-            <a href="./pages/gallery.html" class="header-right" rel="noopener norefereer">Galéria</a>
-            <a href="./pages/contact.html" class="header-right" rel="noopener norefereer">Kontakt</a>
+            <a href="oldee18.github.io/purestream" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
+            <a href="./pages/gallery.html" class="header-right" rel="noopener noreferrer">Galéria</a>
+            <a href="./pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
         </div>
     </div>
 </body>
