--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galéria</title>
+    <link rel="stylesheet" href="./gallery.css">
 </head>
 <body>
-    <p>asdfsadf</p>
+    <div class="csizmadia">
+        <p class="header-text">Mediterrán kert</p>
+            <div class="images">
+                <img src="../images/csizmadia/1.jpg" alt="">
+                <img src="../images/csizmadia/2.jpg" alt="">
+                <img src="../images/csizmadia/3.jpg" alt="">
+                <img src="../images/csizmadia/4.jpg" alt="">
+                <img src="../images/csizmadia/6.jpg" alt="">
+                <img src="../images/csizmadia/7.jpg" alt="">
+            </div>
+    </div>
 </body>
 </html>
