Hozzáadva a navigációs sáv a galléria oldalhoz

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="./gallery.css">
 </head>
 <body>
+    <div class="header">
+        <img src="../images/logo.png" alt="Pure stream logo" width="90px" height="auto">
+        <div class="header-buttons">
+            <a href="../index.html" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
+            <a href="./pages/gallery.html" class="header-right" rel="noopener noreferrer">Galéria</a>
+            <a href="./pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
+        </div>
+    </div>    
     <div class="csizmadia">
         <p class="header-text">Mediterrán kert</p>
             <div class="images">
-                <img src="../images/csizmadia/1.jpg" alt="">
-                <img src="../images/csizmadia/2.jpg" alt="">
-                <img src="../images/csizmadia/3.jpg" alt="">
-                <img src="../images/csizmadia/4.jpg" alt="">
-                <img src="../images/csizmadia/6.jpg" alt="">
-                <img src="../images/csizmadia/7.jpg" alt="">
+                <img class="images-img" src="../images/csizmadia/1.jpg" alt="">
+                <img class="images-img" src="../images/csizmadia/2.jpg" alt="">
+                <img class="images-img" src="../images/csizmadia/3.jpg" alt="">
+                <img class="images-img" src="../images/csizmadia/4.jpg" alt="">
+                <img class="images-img" src="../images/csizmadia/6.jpg" alt="">
+                <img class="images-img" src="../images/csizmadia/7.jpg" alt="">
             </div>
     </div>
 </body>
