--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt</title>
+    <title>Kapcsolat</title>
+    <link rel="stylesheet" href="../pages/contact.css">
+
 </head>
 <body>
-    <p>Kontakt</p>
+    <div class="header">
+        <img src="../images/logo.png" alt="Pure stream logo" width="150px" height="auto">
+        <div class="header-buttons">
+            <a href="../index.html" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
+            <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Galéria</a>
+            <a href="../pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
+        </div>
+    </div>
 </body>
 </html>
