--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../images/logo.png" alt="Pure stream logo" width="150px" height="auto">
+        <img class="header-logo" src="../images/logo.png" alt="Pure stream logo" width="150px" height="auto">
         <div class="header-buttons">
             <a href="../index.html" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
             <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Galéria</a>
