--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,7 +12,7 @@
         <img class="header-logo" src="../images/logo.png" alt="Pure stream logo" width="150px" height="auto">
         <div class="header-buttons">
             <a href="../index.html" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
-            <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Galéria</a>
+            <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Referenciáink</a>
             <a href="../pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
         </div>
     </div>
