--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -11,12 +11,12 @@
         <img class="header-logo" src="../images/logo.png" alt="Pure stream logo" width="150px" height="auto">
         <div class="header-buttons">
             <a href="../index.html" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
-            <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Galéria</a>
+            <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Referenciáink</a>
             <a href="../pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
         </div>
     </div>    
     <div class="csizmadia">
-        <p class="header-text">Mediterrán kert</p>
+        <div class="csizmadia-text">Mediterrán kert</div>
             <div class="images">
                 <img class="images-img" src="../images/csizmadia/1.jpg" alt="">
                 <img class="images-img" src="../images/csizmadia/2.jpg" alt="">
