--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
             <a href="./pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="contact">
+            <div>Telefonszámunk: +36-70/396-2523</div>
+            <div>Email: info@purestream.hu</div>
+        </div>
+        <img class="footer-logo" src="../purestream/images/logo.png" alt="Pure stream logo">
+        <div class="social-media">
+            <a href="https://www.facebook.com/profile.php?id=61556054290120" target="_blank" rel="noopener noreferrer">Facebook</a>
+
+        </div>
+    </footer>
 </body>
 </html>
