Elhelyezve a header és a footer a végleges helyére, illetve kivéve a kapcsolat menüpont

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -12,7 +12,6 @@
         <div class="header-buttons">
             <a href="../index.html" class="header-right" rel="noopener noreferrer">Kezdőlap</a>
             <a href="../pages/gallery.html" class="header-right" rel="noopener noreferrer">Referenciáink</a>
-            <a href="../pages/contact.html" class="header-right" rel="noopener noreferrer">Kapcsolat</a>
         </div>
     </div>    
     <div class="csizmadia">
@@ -26,5 +25,17 @@
                 <img class="images-img" src="../images/csizmadia/7.jpg" alt="">
             </div>
     </div>
+
+    <footer class="footer">
+        <div class="contact">
+            <div>Telefonszámunk: +36-70/396-2523</div>
+            <div>Email: info@purestream.hu</div>
+        </div>
+        <img class="footer-logo" src="../images/logo.png" alt="Pure stream logo">
+        <div class="social-media">
+            <a href="https://www.facebook.com/profile.php?id=61556054290120" target="_blank" rel="noopener noreferrer">Facebook</a>
+
+        </div>
+    </footer>
 </body>
 </html>
