Email és telefon link hozzáadva, illetve a facebook ikon

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 
     <footer class="footer">
         <div class="contact">
-            <div>Telefonszámunk: +36-70/396-2523</div>
-            <div>Email: info@purestream.hu</div>
+            <div>Telefonszámunk: <a href="tel:+36703962523">+36-70/396-2523</a></div>
+            <div>Email: <a href="mailto:info@purestream.hu">info@purestream.hu</a></div>
         </div>
         <img class="footer-logo" src="../purestream/images/logo.png" alt="Pure stream logo">
         <div class="social-media">
-            <a href="https://www.facebook.com/profile.php?id=61556054290120" target="_blank" rel="noopener noreferrer">Facebook</a>
+            <a href="https://www.facebook.com/profile.php?id=61556054290120" target="_blank" rel="noopener noreferrer"><img src="./images/facebook-icon.svg" alt=""></a>
 
         </div>
     </footer>
