Hozzáadva a landing page content és elhelyezve a végleges pozícióban

--- a/index.html
+++ b/index.html
@@ -14,6 +14,30 @@
             <a href="./pages/gallery.html" class="header-right" rel="noopener noreferrer">Referenciáink</a>
         </div>
     </div>
+    <div class="landing-container">
+        <div class="container first">
+            <div class="content-header">Álmodd meg KERTED, mi megvalósítjuk!</div>
+            <div class="content-text">
+                Szenvedéllyel és szakértelemmel teremtjük meg az otthonod kertjének új arcát. A kert több, mint egyszerű növényekkel telepített terület – ez a hely, ahol feltöltődhet, inspirálódhat, és a természet közelében élhet. Célunk, hogy a kertje ne csupán szép, hanem funkcionális, környezetbarát és fenntartható is legyen.
+                <img class="content-image"src="./images/landingpage-content/1.jpg" width="500vw" height="auto"  alt="Egy megtervezett kert részlete">
+            </div>
+        </div>
+        <div class="container second">
+            <div class="content-header">Kerttervezés: A Természet Harmóniája</div>
+            <div class="content-text">
+                A kerttervezés minden lépése precíziót és kreativitást igényel. Első lépésként felmérjük az adott terület lehetőségeit, majd figyelembe vesszük az igényeid és elképzeléseid. A tervezés során nem csupán az esztétika, hanem az éghajlati és talajviszonyok is kiemelt szerepet kapnak.
+                Legyen szó egy családi ház kis kertjéről, modern minimalista kertről vagy nagyobb, parkos övezetről, ipari területről, minden projektet egyedileg készítünk el, 3D-s látványtervvel kiegészítve. A megfelelő növényválasztás és a terek kreatív kihasználása már sok meglévő ügyfelünknek okozott maximális elégedettséget.
+                <img src="./images/landingpage-content/2.png" alt="Egy megtervezett kert részlete" width="500vw" height="auto" class="content-image">
+            </div>
+        </div>
+        <div class="container third">
+            <div class="content-header">Professzionális Öntözőrendszer Kialakítása</div>
+            <div class="content-text">
+                A gyönyörű kert fenntartásának kulcsa a megfelelő öntözőrendszer. Személyre szabott megoldásokat kínálunk, amelyek biztosítják, hogy növényeid mindig megfelelő mennyiségű vizet kapjanak – energiatakarékos és fenntartható módon. Automata rendszereink időt és energiát takarítanak meg, miközben növelik kerted élettartamát és esztétikai értékét.
+                Az öntözési megoldásaink rugalmasak: csepegtető rendszerek, esőztető fejek és mikro öntöző rendszerek is megtalálhatók kínálatunkban. Minden projekt során figyelembe vesszük az adott kert növényzeti igényeit és a te életstílusod.
+            </div>
+        </div>
+    </div>
 
     <footer class="footer">
         <div class="contact">
