Beraktam a landing page-re az utolsó képet, illetve a galériát szerkesztettem

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <div class="content-text">
                 A gyönyörű kert fenntartásának kulcsa a megfelelő öntözőrendszer. Személyre szabott megoldásokat kínálunk, amelyek biztosítják, hogy növényeid mindig megfelelő mennyiségű vizet kapjanak – energiatakarékos és fenntartható módon. Automata rendszereink időt és energiát takarítanak meg, miközben növelik kerted élettartamát és esztétikai értékét.
                 Az öntözési megoldásaink rugalmasak: csepegtető rendszerek, esőztető fejek és mikro öntöző rendszerek is megtalálhatók kínálatunkban. Minden projekt során figyelembe vesszük az adott kert növényzeti igényeit és a te életstílusod.
+                <img src="./images/landingpage-content/3.jpg" alt="Egy szorófej locsol" width="500vw" height="auto" class="content-image">
             </div>
         </div>
     </div>
