--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -15,7 +15,14 @@
         </div>
     </div>    
     <div class="csizmadia">
-        <div class="csizmadia-text">Mediterrán kert</div>
+        <div class="csizmadia-header">Mediterrán kert</div>
+        <div class="csizmadia-text">
+            <div class="text">Megrendelőnk álma egy mediterrán stílusú kert volt, melyhez a mi segítségünket kérte. 
+            A mediterrán hangulatú kert kialakítása során a növények, a kerti burkolatok, a kavicsok, díszkövek, kerti bútorok és egyéb elemek helyes kiválasztása egyaránt nélkülözhetetlen.
+            Amennyiben mediterrán vagy trópusi jellegű kert kialakításába fogunk, úgy meg kell találnunk azokat a fajtákat, amelyek környezetünkhöz, ízlésünkhöz (és pénztárcánkhoz) leginkább passzolnak. 
+            Számos növény számításba jöhet, a különféle pálmáktól a citrusfélékig, a pozsgásoktól a cédrusokig, a nemesbabértól az olajfáig, a leanderektől a levenduláig és sorolhatnánk. 
+            Éppen ezért minden kertet egyedileg tervezünk meg, fontos számunkra ügyfelünk maximális elégedettsége. Így született meg a képeken látható kert is. 
+            </div>
             <div class="images">
                 <img class="images-img" src="../images/csizmadia/1.jpg" alt="">
                 <img class="images-img" src="../images/csizmadia/2.jpg" alt="">
@@ -24,6 +31,7 @@
                 <img class="images-img" src="../images/csizmadia/6.jpg" alt="">
                 <img class="images-img" src="../images/csizmadia/7.jpg" alt="">
             </div>
+        </div>
     </div>
 
     <footer class="footer">
